--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,51 +7,54 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="de.ct.ctificate.MainActivity"
-    android:elevation="@dimen/abc_button_inset_horizontal_material">
+    tools:context="de.ct.ctificate.MainActivity">
 
-    <ScrollView
+
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/scrollView">
+        android:layout_height="wrap_content">
 
-        <RelativeLayout
+        <TextView
+            android:id="@+id/UrlLabel"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:text="@string/urlLabel" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/urlLabel"
-                android:id="@+id/UrlLabel"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+        <EditText
+            android:id="@+id/Url"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/UrlLabel"
+            android:inputType="textUri"
+            android:text="@string/urlPreset" />
 
-            <EditText
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/Url"
-                android:inputType="textUri"
-                android:layout_below="@+id/UrlLabel"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+        <Button
+            android:id="@+id/connectButton"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/Url"
+            android:background="@color/colorPrimaryDark"
+            android:minHeight="80dp"
+            android:text="@string/connect"
+            android:textColor="@color/primary_material_light"
+            android:textSize="@dimen/abc_text_size_large_material" />
 
-            <Button
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/connect"
-                android:id="@+id/button"
-                android:layout_below="@+id/Url"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:minHeight="80dp"
-                android:background="@color/colorPrimaryDark"
-                android:textColor="@color/primary_material_light"
-                android:textSize="@dimen/abc_text_size_large_material" />
+        <ExpandableListView
+            android:id="@+id/certificateChainView"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/connectButton"
+            android:layout_marginTop="8dp" />
 
-        </RelativeLayout>
-
-    </ScrollView>
+    </RelativeLayout>
 
 </RelativeLayout>
